# omcp_r

./: .gitignore  DEMO_GUIDE.md  DEMO_QUICK_REFERENCE.md  Dockerfile  Dockerfile.r-sandbox  README.md  WIKI.md  demo_test.py  deno_pyodide_server.ts  docker-compose.yml  install.sh  mkdocs.yml  package.json  pyodide_server.js  pyproject.toml  renovate.json  requirements.txt  sample.env  sandbox_server.py  server.py  server_fastmcp.py  showcase_demo.py
.github/workflows/: renovate.yml
docs/: README.md  api-reference.md  architecture.md  codebase-structure.md  configuration.md  deployment.md  implementation.md  security.md
examples/: test_connection.py
src/: client.py
src/omcp_py/: config.py  main.py  sandbox_manager.py
src/omcp_py/core/: sandbox.py
src/omcp_py/tools/: execution_tools.py  run_python.py  sandbox_tools.py
src/omcp_py/utils/: config.py  omcp_py.py
src/omcp_r/: __init__.py  config.py  errors.py  execution_limits.py  main.py  path_policy.py  sandbox_manager.py
src/pysandbox/: __init__.py
src/pysandbox/utils/: pysandboxutils.py
tests/: conftest.py  test_errors.py  test_execution_limits.py  test_path_policy.py  test_sandbox_manager.py
