[project]
name = "omcp_py"
version = "0.1.0"
description = "Python utilities for OMOP CDM data manipulation"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]",
    "numpy",
    "pandas"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true

[project.scripts]
omcp-py = "omcp_py.server:main"
